# nick

./: .gitignore  CMakeLists.txt  README.md  TEST_RESULTS.md
client/: CMakeLists.txt
client/inc/: client.h
client/src/: client.cpp  main_client.cpp
data/: data.json
doc/: doxyconf
inc/: task.h
server/: CMakeLists.txt
server/inc/: server.h
server/lib/inc/: json_handler_lib.h
server/lib/src/: json_handler_lib.cpp
server/src/: main_server.cpp  server.cpp
src/: main.cpp  task.cpp
tests/: CMakeLists.txt  test_json_handler.cpp
